# IPS-framework

./: .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  .sonarcloud.properties  .travis.yml  CITATION  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.txt  bokeh-plots.ipynb  gratuitious  pyproject.toml  setup.cfg  setup.py
branches/nested-flow-dev/framework/utils/: BeautifulSoup.py  CMakeLists.txt  animate_parareal_converge.py  convert_log.py  exec_timer_parareal.py  gen_stddev.py  serial_timer.py
branches/nested-flow-dev/tests/: CMakeLists.txt  CmakeTests.cmake
branches/nested-flow-dev/tests/dakota/: dakota_test_Rosenbrock.py
branches/nested-flow-dev/tests/helloworld/: CMakeLists.txt  hello_worker_task_pool.py  hello_world.ips  test_ips.sh
branches/nested-flow-dev/tests/model_physics/: restart_12_sec.config
branches/nested-flow-dev/tests/multirun/: CMakeLists.txt
branches/nested-flow-dev/tests/permutations/: CMakeLists.txt
branches/nested-flow-dev/tests/unittest/: CMakeLists.txt  exception_test.py  unittest_rm_tests.py  unittest_tm_tests.py
components/drivers/elwasif/: CMakeLists.txt  Makefile  elwasif_driver.py  sim.conf
components/drivers/hello/: CMakeLists.txt  Makefile  hello_driver.py  hello_worker.py  hello_worker_task_pool.py  hello_world.config
components/drivers/ku/: CMakeLists.txt  epa_driver.py  ku_driver.py
components/drivers/txcorp/: CMakeLists.txt  README  model_RF_IC_input.nml  run_tx.sh  txcorp_driver.py
doc/: CMakeLists.txt  (+8 more)
framework/lsa_scripts/: CMakeLists.txt  lsa_gridftp.py
framework/src/: CMakeLists.txt  RunspaceInit_Component.py  cca_es_spec.py  checklist.py  component.py  componentRegistry.py  configobj.py  configurationManager.py  convert_log_function.py  dakota_bridge.py  dataManager.py  eventService.py  eventServiceProxy.py  ftbBridge.py  ips-config.py  ips.py  ipsLogging.py  ipsTiming.py  ips_dakota_client.py  ips_dakota_dynamic.py  ips_es_spec.py  ips_notes.txt  ipsutil.py  node_structure.py  portalBridge.py  resourceHelper.py  resourceManager.py  runspaceInitComponent.py  sendPost.py  services.py  taskManager.py  test_ips.py  test_proc_placement.py  topicManager.py
framework/src/tests/: CMakeLists.txt  README
framework/src/tests/comprehensive/: basic_concurrent1.conf  basic_serial1.conf  mhd.conf  simple_platform.conf  test_ips.py
framework/src/tests/facets/: iter.conf
framework/src/tests/refactor/: basic_serial1_iter.conf  laptop.conf  test_ips.py  test_permutations.py
framework/src/tests/unittest/: unittest_rm_tests.py  unittest_tm_tests.py
share/: CMakeLists.txt  platform.conf.in
trunk/: AUTHORS  CMakeLists.txt  README.txt  gratuitious
trunk/components/drivers/: CMakeLists.txt
trunk/doc/: CMakeLists.txt  Makefile  Makefile.sphinx.in  Primer on use of the SWIM IPS.doc  README  make.bat  pubs.rst  the_code.rst
trunk/doc/component_guides/: component_guides.rst
trunk/doc/developer_guides/: adv_plasma_state.rst
trunk/doc/examples/: Makefile  component_skeleton.py  edison.conf  example_comp.py  hello_world.config  model_sim_bs.stix  restart_12_sec.config  sample_batchscript.edison  sample_batchscript.franklin  sample_batchscript.stix  seq_model_sim.config  skeleton_comp.py
trunk/doc/getting_started/: getting_started.rst
trunk/doc/misc/: README
trunk/doc/portal_guides/: portal_guides.rst
trunk/doc/user_guides/: advanced_guide_new.rst  api_guide.rst  config_file.rst  examples_listing.rst  manual_platform.rst  user_guides.rst
trunk/framework/: CMakeLists.txt
trunk/framework/lsa_scripts/: CMakeLists.txt  lsa.py
trunk/framework/src/: CMakeLists.txt  Makefile  RunspaceInit_Component.py  checklist.py  component.py  componentRegistry.py  configobj.py  configurationManager.py  create_batch_script.py  dakota_bridge.py  dataManager.py  debug.py  eventServiceProxy.py  ftbBridge.py  ips-config.py  ips.py  ipsExceptions.py  ipsLogging.py  ipsTiming.py  ips_dakota_client.py  ips_dakota_dynamic.py  ips_es_spec.py  ips_notes.txt  ipsutil.py  messages.py  node_structure.py  platform.py  portalBridge.py  resourceHelper.py  resourceManager.py  runspaceInitComponent.py  sendPost.py  services.py  taskManager.py  test_get_nids  test_ips.py  test_resource_parsing.py
trunk/framework/utils/: BeautifulSoup.py  CMakeLists.txt  Events.py  Framework.py  animate_parareal_converge.py  animate_parareal_tasks.py  batch_mgmt_script.py  convert_log.py  convert_log_minimal.py  exec_timer.py  gen_stddev.py  physics_timer.py  read_dict.py  serial_timer.py
trunk/sf-hosting/backups/: ipsframework.conf
trunk/sf-hosting/doc-sync/: update-docs-ipsframework  update-docs-ipsframework.crontab
trunk/share/: CMakeLists.txt  components-generic.conf.in  platform.conf.in
trunk/templating/: WorkflowNotes.txt  euler1d-input.xml  parse-nautilus-tmpl.py  workflow.sh
trunk/templating/core-edge02/: core-edge.config  core-edge01.pre  fg_g118897.01555.in  franklin.conf  resource_usage  run_tx.sh  uedge-inputfile.py
trunk/templating/nautilus/: brioAndWuRK2.mako  lessSimple.xml  simple.xml
trunk/templating/simple01/: euler1d-input.czgui
trunk/templating/simple02/: euler1d-input.mko
trunk/tests/: CMakeLists.txt  CmakeTests.cmake  frameworkpath.py.in
trunk/tests/comprehensive/: CMakeLists.txt  basic_serial2.conf  franklin.conf  test_ips.py  workstation.conf
trunk/tests/dakota/: CMakeLists.txt  dakota_test_Rosenbrock.config  dakota_test_Rosenbrock.in  dakota_test_Rosenbrock.ips  test_ips.sh  test_ips_without_platform.sh
trunk/tests/facets/: CMakeLists.txt  basic_serial1_laptop.conf
trunk/tests/helloworld/: CMakeLists.txt  hello_driver.py  hello_worker.py  test_ips.sh
trunk/tests/multirun/: basic_serial2.ips  test_ips.sh
trunk/tests/permutations/: basic_serial1.ips  test_parameterized_cases.py  test_permutations.py
trunk/tests/refactor/: CMakeLists.txt  basic_serial1.ips  test_ips.py  test_ips.sh  test_ips_laptop.py  test_permutations.py
trunk/tests/unittest/: exception_test.py
trunk/utilities/: hd_timings.pl
trunk/utilities/src/: Makefile  SWIM_global_data_mod.f90  change_power.f90
(+676 files in other folders)
