######################################################################
#
# CMakeLists.txt for simple examples
#
# $Id: CMakeLists.txt 17128 2011-06-23 16:10:39Z kruger $
#
######################################################################

add_subdirectory(lsa_scripts)
add_subdirectory(src)
add_subdirectory(utils)
