######################################################################
#
# CMakeLists.txt for drivers
#
# $Id$
#
######################################################################

add_subdirectory(elwasif)
add_subdirectory(facets)
add_subdirectory(hello)
add_subdirectory(ku)
add_subdirectory(txcorp)
